force-app/main/default/objects/pse__Proj__c/fields/pse__Jira_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Project_URL__c</fullName>
    <description>URL to the related project in Jira.</description>
    <formula>IF(pse__Sync_With_Jira__c &amp;&amp; !ISBLANK(pse__Jira_Correlation_ID__c) &amp;&amp; (ISPICKVAL(pse__Jira_Project__c , &apos;&apos;) || ISPICKVAL(pse__Jira_Project__c , &apos;None&apos;)), HYPERLINK($Setup.pse__Integration_Hub_Connector_Jira_PSA__c.pse__Jira_Application_URL__c + &apos;/browse/&apos; + pse__Jira_Project_Key__c, &apos;View Project in Jira&apos; ,&apos;_blank&apos;) ,&apos;&apos;)</formula>
    <inlineHelpText>URL to the related project in Jira.</inlineHelpText>
    <label>Jira Project URL</label>
    <type>Text</type>
</CustomField>