force-app/main/default/objects/pse__Proj__c/fields/pse__Master_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Master Project For Sub-Projects:</relationshipLabel>
    <relationshipName>MasterProjectForSubProjects</relationshipName>
    <type>Lookup</type>
</CustomField>