force-app/main/default/objects/pse__Proj__c/fields/pse__Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Notes__c</fullName>
    <description>Staffing project notes</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>