force-app/main/default/objects/pse__Proj__c/fields/pse__Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Status_Notes__c</fullName>
    <label>Project Status Notes</label>
    <type>TextArea</type>
</CustomField>