force-app/main/default/objects/pse__Proj__c/fields/pse__Rate_Card_Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Card_Percentage_Discount__c</fullName>
    <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</description>
    <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</inlineHelpText>
    <label>Rate Card Percentage Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>