force-app/main/default/objects/pse__Proj__c/fields/pse__Requires_Dependency_Sync__c.field-meta.xml
<CustomField>
    <fullName>pse__Requires_Dependency_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Dependency Sync</label>
    <type>Checkbox</type>
</CustomField>