force-app/main/default/objects/pse__Proj__c/fields/pse__Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>