force-app/main/default/objects/pse__Proj__c/fields/pse__Sync_With_Jira__c.field-meta.xml
<CustomField>
    <fullName>pse__Sync_With_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the project is synchronized with Jira.</description>
    <inlineHelpText>Controls whether the project is synchronized with Jira.</inlineHelpText>
    <label>Sync with Jira</label>
    <type>Checkbox</type>
</CustomField>