force-app/main/default/objects/pse__Proj__c/fields/pse__Tasks_Total_Percent_Complete_Points__c.field-meta.xml
<CustomField>
    <fullName>pse__Tasks_Total_Percent_Complete_Points__c</fullName>
    <formula>IF (pse__Tasks_Total_Points__c=0, 0, pse__Tasks_Total_Points_Complete__c/pse__Tasks_Total_Points__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks Total Percent Complete (Points)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>