force-app/main/default/objects/pse__Proj__c/fields/pse__Total_Projected_Revenue_From_Assignments__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Projected_Revenue_From_Assignments__c</fullName>
    <label>Total Projected Revenue From Assignments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>