force-app/main/default/objects/pse__Proj__c/fields/pse__Unscheduled_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Unscheduled_Backlog__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Unscheduled Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>