force-app/main/default/objects/pse__Proj__c/fields/pse__Work_Calendar__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Calendar</label>
    <referenceTo>pse__Work_Calendar__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Project_Work_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>