force-app/main/default/objects/pse__Proj__c/fields/Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Status__c</fullName>
    <description>Red/Yellow/Green status for overall quality based on Risks &amp; Issues records</description>
    <label>Quality Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>