force-app/main/default/objects/pse__Proj__c/fields/Resource_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resource_Notes__c</fullName>
    <formula>pse__Opportunity__r.Resource_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Notes</label>
    <type>Text</type>
</CustomField>