force-app/main/default/objects/pse__Proj__c/fields/Resourcing_Status__c.field-meta.xml
<CustomField>
    <fullName>Resourcing_Status__c</fullName>
    <description>Red/Yellow/Green status for project resources</description>
    <label>Resourcing Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>