force-app/main/default/objects/pse__Proj__c/fields/Rev_Rec_Model__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Model__c</fullName>
    <description>Represents rev rec model used by finance to recognize deliverables for project</description>
    <inlineHelpText>Represents rev rec model used by finance to recognize deliverables for project</inlineHelpText>
    <label>Rev Rec Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time and Material</fullName>
            </value>
            <value>
                <fullName>Fixed Price (Fixed Deliverable)</fullName>
            </value>
            <value>
                <fullName>Fixed Price (Percent Complete Effort)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>