force-app/main/default/objects/pse__Proj__c/fields/Risk_Level_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level_Status__c</fullName>
    <description>Red/Yellow/Green indicator for overall project risk level based on risks and issues</description>
    <label>Risk Level Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>