force-app/main/default/objects/pse__Proj__c/fields/Salesforce_Products__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Products__c</fullName>
    <description>Choose every cloud associated with the project.</description>
    <inlineHelpText>Choose every cloud associated with the project.</inlineHelpText>
    <label>Salesforce Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Banking Cloud</fullName>
                <isActive>false</isActive>
                <label>Banking Cloud</label>
            </value>
            <value>
                <fullName>Collaboration (Quip)</fullName>
                <isActive>false</isActive>
                <label>Collaboration (Quip)</label>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Data Management (DMP)</fullName>
                <isActive>false</isActive>
                <label>Data Management (DMP)</label>
            </value>
            <value>
                <fullName>Education Cloud</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Field Service Lightning</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Government Cloud</fullName>
            </value>
            <value>
                <fullName>Healthcare Cloud</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
                <isActive>false</isActive>
                <label>Identity</label>
            </value>
            <value>
                <fullName>Integration Cloud (Mulesoft)</fullName>
                <isActive>false</isActive>
                <label>Integration Cloud (Mulesoft)</label>
            </value>
            <value>
                <fullName>IoT Cloud</fullName>
                <isActive>false</isActive>
                <label>IoT Cloud</label>
            </value>
            <value>
                <fullName>Live Message / Live Agent</fullName>
                <isActive>false</isActive>
                <label>Live Message / Live Agent</label>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Non Profit Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>PDO: AppExchange App Development</fullName>
            </value>
            <value>
                <fullName>Philanthropy Cloud</fullName>
                <isActive>false</isActive>
                <label>Philanthropy Cloud</label>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
                <label>Revenue Cloud (CPQ)</label>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Einstein (IQ)</fullName>
                <isActive>false</isActive>
                <label>Sales Cloud Einstein (IQ)</label>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Shield</fullName>
                <isActive>false</isActive>
                <label>Shield</label>
            </value>
            <value>
                <fullName>Success Packs</fullName>
                <isActive>false</isActive>
                <label>Success Packs</label>
            </value>
            <value>
                <fullName>Wave</fullName>
                <isActive>false</isActive>
                <label>Wave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>